--- a/fakes3/config/nginx/nginx.conf
+++ b/fakes3/config/nginx/nginx.conf
@@ -31,7 +31,7 @@ http {
       proxy_redirect off;
       add_header Access-Control-Allow-Methods 'GET, PUT, POST, HEAD, OPTIONS';
       add_header Access-Control-Expose-Headers 'ETag, Accept-Ranges, Content-Range, Content-Encoding, Content-Length';
-      add_header Access-Control-Allow-Headers 'range';
+      add_header Access-Control-Allow-Headers '*';
       add_header Access-Control-Max-Age '3000';
       proxy_hide_header Access-Control-Allow-Methods;
       proxy_hide_header Access-Control-Expose-Headers;
@@ -40,6 +40,9 @@ http {
 
       location / {
         proxy_pass http://127.0.0.1:14567;
+        if ($request_method = OPTIONS ) {
+           add_header Access-Control-Allow-Headers $http_access_control_request_headers;
+        }
       }
 
       error_log         /tmp/nginx-error.log;
