Update consul to 0.7.0

--- a/consul/Dockerfile
+++ b/consul/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:14.04
 MAINTAINER ductamnguyen@anduintransact.com
 
 ENV DEBIAN_FRONTEND=noninteractive \
-    CONSUL_VERSION=0.7.0-rc2
+    CONSUL_VERSION=0.7.0
 
 RUN apt-get update && apt-get install -y unzip wget && \
     wget https://releases.hashicorp.com/consul/${CONSUL_VERSION}/consul_${CONSUL_VERSION}_linux_amd64.zip && \
