Update ruby to 2.1

--- a/anduin-build/Dockerfile
+++ b/anduin-build/Dockerfile
@@ -37,8 +37,15 @@ RUN apt-get --quiet update && \
     rm -f /jdk-8.tar.gz && \
     chown -R root:root /usr/lib/jvm
 
-# Install SCSS
-RUN gem install sass -v 3.4.21
+# Update ruby
+RUN apt-get update && \
+    apt-get install -y curl patch gawk g++ gcc make libc6-dev patch libreadline6-dev zlib1g-dev libssl-dev libyaml-dev libsqlite3-dev sqlite3 autoconf libgdbm-dev libncurses5-dev automake libtool bison pkg-config libffi-dev
+RUN gpg --keyserver hkp://keys.gnupg.net --recv-keys D39DC0E3
+RUN /bin/bash -l -c "curl -L get.rvm.io | bash -s stable"
+RUN /bin/bash -l -c "rvm install 2.1"
+ENV PATH /usr/local/rvm/rubies/ruby-2.1.8/bin:$PATH
+RUN /bin/bash -l -c "echo 'gem: --no-ri --no-rdoc' > ~/.gemrc"
+RUN /bin/bash -l -c "gem install bundler --no-ri --no-rdoc"
 
 # set the environment variables 
 ENV JDK_HOME /usr/lib/jvm/jdk1.8.0_101
