--- a/kong/supervisord.conf
+++ b/kong/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 loglevel = debug
 
 [program:kong]
-command = /usr/local/bin/kong start
+command = /run-kong.sh
 priority = 1
 autostart = true
 autorestart = true
