--- a/prom/alertmanager/supervisord.conf
+++ b/prom/alertmanager/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 loglevel = debug
 
-[program:prometheus]
+[program:alertmanager]
 command = /opt/alertmanager -config.file /opt/alertmanager.yml -storage.path /data/alertmanager
 priority = 1
 autostart = true
