Add custom args to alert manager

--- a/prom/alertmanager/supervisord.conf
+++ b/prom/alertmanager/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 loglevel = debug
 
 [program:alertmanager]
-command = /opt/alertmanager -config.file /opt/alertmanager.yml -storage.path /data/alertmanager
+command = /run-alertmanager.sh
 priority = 1
 autostart = true
 autorestart = true
