Update couchdb docker to allow set custom admin password

--- a/couchdb/Dockerfile
+++ b/couchdb/Dockerfile
@@ -1,13 +1,13 @@
 # Based on https://github.com/klaemo/docker-couchdb
-FROM klaemo/couchdb
-MAINTAINER Binh Nguyen "binhnguyen@anduintransact.com"
+FROM klaemo/couchdb:1.6.1
+MAINTAINER ductamnguyen@anduintransact.com
 
 RUN echo "deb http://http.debian.net/debian wheezy-backports main" >> /etc/apt/sources.list
 
 RUN apt-get update -y \
   && apt-get install -y --no-install-recommends \
     build-essential git rebar software-properties-common \
-    python-software-properties supervisor
+    python-software-properties supervisor gettext
 
 # install plugins
 RUN mkdir -p /usr/local/lib/couchdb/plugins && \
@@ -29,7 +29,7 @@ ADD ./config/supervisor /etc/supervisor
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-COPY ./config/couchdb/local.ini /usr/local/etc/couchdb/
+COPY ./config/couchdb/local.ini /usr/local/etc/couchdb/local.ini.tmpl
 
 # Overwrite the start_couch script with our own version that starts logrotate, couchdb and nginx
 ADD ./start_couch /opt/start_couch
