--- a/couchdb/config/couchdb/local.ini
+++ b/couchdb/config/couchdb/local.ini
@@ -10,6 +10,8 @@ uuid = e1a1e6d84932b5ed1e36cea1c97d04ba
 delayed_commits = false
 file_compression = snappy
 max_dbs_open = 50000
+database_dir=$COUCHDB_DIR/data
+view_index_dir=$COUCHDB_DIR/data
 
 [httpd]
 port = 5984
@@ -24,7 +26,7 @@ socket_options = [{recbuf, 262144}, {sndbuf, 262144}, {nodelay, true}]
 
 ; Uncomment next line to trigger basic-auth popup on unauthorized requests.
 ;WWW-Authenticate = Basic realm="administrator"
-WWW-Authenticate = Basic realm="Anduin Transactions, Inc."
+WWW-Authenticate = Basic realm="$COUCHDB_AUTH_REALM"
 authentication_handlers = {couch_httpd_oauth, oauth_authentication_handler}, {couch_httpd_auth, cookie_authentication_handler}, {couch_httpd_auth, default_authentication_handler}
 
 ; Uncomment next line to set the configuration modification whitelist. Only
@@ -55,11 +57,11 @@ use_users_db = true
 ; above. If you don't configure a WWW-Authenticate header, CouchDB will send
 ; Basic realm="server" in order to prevent you getting logged out.
 require_valid_user = true
-secret = ec1c672b200e43446fd22f31c47e4cc3
+allow_persistent_cookies = true
 
 [log]
 level = debug
-file = /usr/local/var/log/couchdb/couchdb.log
+file = $COUCHDB_DIR/logs/couchdb.log
 
 [log_level_by_module]
 ; In this section you can specify any of the four log levels 'none', 'info',
@@ -118,6 +120,4 @@ algorithm = sequential
 ; 'username = password' lines. Don't forget to restart CouchDB after
 ; changing this.
 [admins]
-admin = admin
-anduin@anduintransact.com = Fe5wti19rcRBpiGCj8vxV79B8rAWq
-
+$COUCHDB_USER = $COUCHDB_PASSWORD
