Make couchdb long polling work with kong

--- a/couchdb/config/nginx/nginx.conf
+++ b/couchdb/config/nginx/nginx.conf
@@ -52,6 +52,7 @@ http {
       location ~ "^/userdb-([a-z0-9]+)/_changes$" {
         proxy_pass http://127.0.0.1:5984;
         proxy_buffering off;
+        add_header X-Accel-Buffering no;
 
         limit_except GET OPTIONS HEAD {
           deny all;
