--- a/sync_gateway/config/nginx/nginx.conf
+++ b/sync_gateway/config/nginx/nginx.conf
@@ -32,6 +32,7 @@ http {
       proxy_set_header Cookie $http_stargazerauth;
       proxy_hide_header Set-Cookie;
       add_header Access-Control-Allow-Origin $http_Origin always;
+      add_header X-Accel-Buffering no always;
       proxy_hide_header Access-Control-Allow-Origin;
 
       location / {
