--- a/sync_gateway/config/supervisord/supervisord.conf
+++ b/sync_gateway/config/supervisord/supervisord.conf
@@ -1,14 +1,9 @@
 [supervisord]
 nodaemon = true
-pidfile = /run/supervisord.pid
-# It seems that it's not possible to swith this log to NONE (it creates NONE logfile)
-logfile = /opt/supervisord/logs/supervisord.log
-# Set loglevel=debug, only then all logs from child services are printed out
-# to container logs (and thus available via `docker logs [container]`
 loglevel = debug
 
 [program:sync_gateway]
-command = /opt/anduin/sync_gateway/run_sync_gateway.sh /opt/anduin/couchbase/config.json
+command = /opt/run-consul.sh
 priority = 1
 autostart = true
 autorestart = true
