--- a/oauth-proxy/Dockerfile
+++ b/oauth-proxy/Dockerfile
@@ -1,18 +1,15 @@
-FROM anduin/envconsul
+FROM anduin/consul-template-supervisor:1.1
 
 MAINTAINER ductamnguyen@anduintransact.com
 
-# Install oauth proxy
-RUN wget --no-check-certificate -O /oauth2_proxy.tar.gz \
-    https://github.com/bitly/oauth2_proxy/releases/download/v2.1/oauth2_proxy-2.1.linux-amd64.go1.6.tar.gz && \
-    tar xvzf /oauth2_proxy.tar.gz && mv /oauth2_proxy-2.1.linux-amd64.go1.6/oauth2_proxy / && \
-    rm -rf /oauth2_proxy.tar.gz /oauth2_proxy-2.1.linux-amd64.go1.6
+ENV DEBIAN_FRONTEND noninteractive
+ENV CONSUL_APP_CONFIG /etc/oauth-proxy.toml
+ENV OAUTH_PROXY_VERSION 0.1.0
 
-COPY run-oauth-proxy.sh /
-COPY start-oauth-proxy.sh /
+RUN wget --quiet https://github.com/anduintransaction/oauth-proxy/releases/download/${OAUTH_PROXY_VERSION}/oauth-proxy-${OAUTH_PROXY_VERSION}-linux-amd64.tar.gz && \
+    tar xvzf oauth-proxy-${OAUTH_PROXY_VERSION}-linux-amd64.tar.gz && \
+    rm oauth-proxy-${OAUTH_PROXY_VERSION}-linux-amd64.tar.gz
 
-# Clean up APT when done.
-RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+ADD supervisord.conf /etc/supervisord.conf
 
-EXPOSE 4321
-CMD ["/start-oauth-proxy.sh"]
+CMD /run.sh
