--- a/fakes3/config/nginx/nginx.conf
+++ b/fakes3/config/nginx/nginx.conf
@@ -37,6 +37,8 @@ http {
       proxy_hide_header Access-Control-Expose-Headers;
       proxy_hide_header Access-Control-Allow-Headers;
       proxy_hide_header Access-Control-Max-Age;
+      proxy_hide_header etag;
+      add_header Etag $sent_http_etag always;
 
       location / {
         proxy_pass http://127.0.0.1:14567;
