--- a/fakes3/config/supervisord/supervisord.conf
+++ b/fakes3/config/supervisord/supervisord.conf
@@ -9,6 +9,7 @@ command = fakes3 -p 14567 -r /data
 priority = 1
 autostart = true
 autorestart = true
+stopsignal = INT
 
 [program:nginx]
 command=nginx
