Moving to sync gateway 1.4

--- a/sync_gateway/Dockerfile
+++ b/sync_gateway/Dockerfile
@@ -13,17 +13,15 @@ RUN apt-key adv --recv-keys --keyserver keyserver.ubuntu.com C300EE8C && \
 RUN apt-get autoremove -y && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-    
+
 ENV CONSUL_TEMPLATE_VERSION 0.16.0
 RUN wget -O consul-template.zip https://releases.hashicorp.com/consul-template/${CONSUL_TEMPLATE_VERSION}/consul-template_${CONSUL_TEMPLATE_VERSION}_linux_amd64.zip \
     && unzip consul-template.zip \
     && mv consul-template /usr/local/bin \
     && rm -rf consul-template.zip
 
-RUN wget https://github.com/anduintransaction/sync_gateway/releases/download/1.3-anduin-v1/sync_gateway-1.3.1-anduin-linux-amd64.tar.gz && \
-    tar xvzf sync_gateway-1.3.1-anduin-linux-amd64.tar.gz && \
-    mv sync_gateway /opt && \
-    rm sync_gateway-1.3.1-anduin-linux-amd64.tar.gz
+RUN wget https://packages.couchbase.com/releases/couchbase-sync-gateway/1.4.0/couchbase-sync-gateway-community_1.4.0-2_x86_64.deb && \
+    dpkg --unpack couchbase-sync-gateway-community_1.4.0-2_x86_64.deb
 
 ENV SYNC_GATEWAY_CONFIG_FILE /opt/sync-gateway-config.json
 
