Update docker build java and bundle

--- a/anduin-build/Dockerfile
+++ b/anduin-build/Dockerfile
@@ -7,39 +7,33 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN groupadd -r anduin && useradd -g anduin anduin
 
 # install essential tools
-RUN apt-get update && apt-get -o Dpkg::Options::="--force-confnew" install -yq \
+RUN rm /etc/apt/sources.list.d/redis.list && apt-get update && apt-get -o Dpkg::Options::="--force-confnew" install -yq \
     ca-certificates \
     software-properties-common \
     python-software-properties \
     python-pip \
     curl \
+    wget \
     supervisor \
     git \
     libfontconfig \
     libicu52 \
     --no-install-recommends
 
-# Clean up APT when done.
-RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
 # Install JDK 8 
-RUN apt-get --quiet update && \
-    apt-get --quiet --yes install wget && \
-    apt-get clean && \
-    wget --quiet \
+RUN wget --quiet \
          --output-document=/jdk-8.tar.gz \
          --no-check-certificate \
          --no-cookies \
          --header "Cookie: oraclelicense=accept-securebackup-cookie" \
-         http://download.oracle.com/otn-pub/java/jdk/8u112-b15/jdk-8u112-linux-x64.tar.gz && \
+         http://download.oracle.com/otn-pub/java/jdk/8u121-b13/e9e7ea248e2c4826b92b3f075a80e441/jdk-8u121-linux-x64.tar.gz && \
     mkdir -p /usr/lib/jvm && \
     tar --gunzip --extract --verbose --file /jdk-8.tar.gz --directory /usr/lib/jvm && \
     rm -f /jdk-8.tar.gz && \
     chown -R root:root /usr/lib/jvm
 
 # Update ruby
-RUN apt-get update && \
-    apt-get install -y curl patch gawk g++ gcc make libc6-dev patch libreadline6-dev zlib1g-dev libssl-dev libyaml-dev libsqlite3-dev sqlite3 autoconf libgdbm-dev libncurses5-dev automake libtool bison pkg-config libffi-dev
+RUN apt-get install -y curl patch gawk g++ gcc make libc6-dev patch libreadline6-dev zlib1g-dev libssl-dev libyaml-dev libsqlite3-dev sqlite3 autoconf libgdbm-dev libncurses5-dev automake libtool bison pkg-config libffi-dev
 RUN gpg --keyserver hkp://keys.gnupg.net --recv-keys D39DC0E3
 RUN /bin/bash -l -c "curl -L get.rvm.io | bash -s stable"
 RUN /bin/bash -l -c "rvm install 2.1"
