--- a/nginx-proxy/proxy.conf.template
+++ b/nginx-proxy/proxy.conf.template
@@ -14,6 +14,12 @@ server {
       location / {
         proxy_pass ${PROXY};
         proxy_http_version 1.1;
-        proxy_set_header Connection ""; 
+        proxy_set_header Connection "";
+        proxy_set_header X-Real-IP "";
+        proxy_set_header Upgrade "";
+        proxy_set_header X-Forwarded-For        "";
+        proxy_set_header X-Forwarded-Host       "";
+        proxy_set_header X-Forwarded-Port       "";
+        proxy_set_header X-Forwarded-Proto      "HTTP";
       }
 }
