Restrict POST/PUT to sync gateway

--- a/sync_gateway/config/nginx/nginx.conf
+++ b/sync_gateway/config/nginx/nginx.conf
@@ -37,6 +37,18 @@ http {
 
       location / {
         proxy_pass http://127.0.0.1:4984;
+
+        limit_except GET OPTIONS HEAD {
+          deny all;
+        }
+      }
+
+      location ~ /(.*)/_changes {
+        proxy_pass http://127.0.0.1:4984;
+
+        limit_except GET POST OPTIONS HEAD {
+          deny all;
+        }
       }
 
       error_log         /tmp/nginx-error.log;
