Use phusion for base image

--- a/anduin-common/Dockerfile
+++ b/anduin-common/Dockerfile
@@ -1,6 +1,6 @@
 # Anduin common image
 
-FROM ubuntu:16.04
+FROM phusion/baseimage:0.9.22
 MAINTAINER ductamnguyen@anduintransact.com
 
 ENV DEBIAN_FRONTEND noninteractive
