--- a/ntp-cron/Dockerfile
+++ b/ntp-cron/Dockerfile
@@ -3,4 +3,6 @@ FROM ubuntu:16.04
 RUN apt-get -y update && apt-get install -y ntp && \
     apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-CMD exec ntpd -g -n
+ADD run.sh /opt/run.sh
+
+CMD /opt/run.sh
