--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -1,35 +1,32 @@
 FROM anduin/anduin-common:1.0
 MAINTAINER ductamnguyen@anduintransact.com
 
-ENV KEYCLOAK_VERSION 3.2.1.Final
+ENV KEYCLOAK_VERSION 3.3.0.Final
+# Enables signals getting passed from startup script to JVM
+# ensuring clean shutdown when container is stopped.
+ENV LAUNCH_JBOSS_IN_BACKGROUND 1
+ENV PROXY_ADDRESS_FORWARDING true
+
+RUN apt-get -y update && apt-get install -y jq && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
 RUN wget -O /opt/keycloak-${KEYCLOAK_VERSION}.tar.gz https://downloads.jboss.org/keycloak/${KEYCLOAK_VERSION}/keycloak-${KEYCLOAK_VERSION}.tar.gz && \
     cd /opt && \
     tar xvzf keycloak-${KEYCLOAK_VERSION}.tar.gz && \
     mv keycloak-${KEYCLOAK_VERSION} keycloak && \
     rm keycloak-${KEYCLOAK_VERSION}.tar.gz
 
-ENV POSTGRES_JDBC_VERSION 9.4.1212
+ADD cli /opt/keycloak/cli
+RUN cd /opt/keycloak && bin/jboss-cli.sh --file=cli/standalone-configuration.cli && \
+    cd /opt/keycloak && bin/jboss-cli.sh --file=cli/databases/postgres/standalone-configuration.cli && \
+    rm -rf /opt/keycloak/standalone/configuration/standalone_xml_history
 
-RUN wget -O /opt/postgresql-${POSTGRES_JDBC_VERSION}.jar https://jdbc.postgresql.org/download/postgresql-${POSTGRES_JDBC_VERSION}.jar && \
-    mkdir -p /opt/keycloak/modules/system/layers/keycloak/org/postgresql/main && \
-    mv /opt/postgresql-${POSTGRES_JDBC_VERSION}.jar /opt/keycloak/modules/system/layers/keycloak/org/postgresql/main
+ENV JDBC_POSTGRES_VERSION 42.1.4
 
-RUN apt-get update -y && apt-get install net-tools -y && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-ADD module.xml /opt/keycloak/modules/system/layers/keycloak/org/postgresql/main/module.xml
-ADD changeDatabase.xsl /opt/changeDatabase.xsl
-
-RUN wget -O /opt/saxon.jar http://central.maven.org/maven2/net/sf/saxon/Saxon-HE/9.7.0-18/Saxon-HE-9.7.0-18.jar && \
-    java -jar /opt/saxon.jar \
-    -s:/opt/keycloak/standalone/configuration/standalone.xml \
-    -xsl:/opt/changeDatabase.xsl \
-    -o:/opt/keycloak/standalone/configuration/standalone.xml && \
-    rm /opt/changeDatabase.xsl /opt/saxon.jar
+RUN mkdir -p /opt/keycloak/modules/system/layers/base/org/postgresql/jdbc/main; cd /opt/keycloak/modules/system/layers/base/org/postgresql/jdbc/main; curl -L http://central.maven.org/maven2/org/postgresql/postgresql/$JDBC_POSTGRES_VERSION/postgresql-$JDBC_POSTGRES_VERSION.jar > postgres-jdbc.jar
+ADD databases/postgres/module.xml /opt/keycloak/modules/system/layers/base/org/postgresql/jdbc/main
 
 RUN locale-gen en_US.UTF-8
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
-    
-ADD run-keycloak.sh /opt/keycloak/bin/run-keycloak.sh
 
 ENV VAULT_VERSION=0.8.3
 
@@ -43,8 +40,11 @@ RUN apt-get -y update && apt-get install -y jq unzip && \
     chmod 755 /usr/bin/vault-kube && \
     apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+ADD run-keycloak.sh /opt/keycloak/bin/run-keycloak.sh
 ADD entrypoint.sh /opt/entrypoint.sh
 
-ENTRYPOINT ["/opt/entrypoint.sh"]
+EXPOSE 8080
 
-CMD ["server"]
+ENTRYPOINT [ "/opt/entrypoint.sh" ]
+
+CMD [ "server" ]
