--- a/sidecar-common/Dockerfile
+++ b/sidecar-common/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:16.04
 MAINTAINER ductamnguyen@anduintransact.com
 
 RUN apt-get -y update && \
-    apt-get -y install wget curl python && \
+    apt-get -y install wget curl python netcat && \
     apt-get autoremove -y && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
