--- a/couchbase-cli/Dockerfile
+++ b/couchbase-cli/Dockerfile
@@ -1,9 +1,7 @@
-FROM anduin/couchbase_server:4.5.1
+FROM couchbase:community-5.0.0
 MAINTAINER ductamnguyen@anduintransact.com
 
 ENV VAULT_VERSION=0.8.3
-
-ADD ./cb-cli/* /usr/local/bin/
 
 RUN apt-get -y update && apt-get install -y jq wget unzip && \
     wget https://releases.hashicorp.com/vault/$VAULT_VERSION/vault_${VAULT_VERSION}_linux_amd64.zip && \
@@ -14,5 +12,7 @@ RUN apt-get -y update && apt-get install -y jq wget unzip && \
     mv vault-kube /usr/bin && \
     chmod 755 /usr/bin/vault-kube && \
     apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+ADD ./cb-cli/* /usr/local/bin/
 
 CMD /bin/bash
