Update oauth proxy

--- a/oauth-proxy/Dockerfile
+++ b/oauth-proxy/Dockerfile
@@ -1,15 +1,13 @@
-FROM anduin/consul-template-supervisor:1.1
-
+FROM phusion/baseimage:0.9.22
 MAINTAINER ductamnguyen@anduintransact.com
 
-ENV DEBIAN_FRONTEND noninteractive
-ENV CONSUL_APP_CONFIG /etc/oauth-proxy.toml
 ENV OAUTH_PROXY_VERSION 0.4.0
 
 RUN wget --quiet https://github.com/anduintransaction/oauth-proxy/releases/download/${OAUTH_PROXY_VERSION}/oauth-proxy-${OAUTH_PROXY_VERSION}-linux-amd64.tar.gz && \
     tar xvzf oauth-proxy-${OAUTH_PROXY_VERSION}-linux-amd64.tar.gz && \
+    mv oauth-proxy /opt && \
     rm oauth-proxy-${OAUTH_PROXY_VERSION}-linux-amd64.tar.gz
 
-ADD supervisord.conf /etc/supervisord.conf
+ADD run-oauth-proxy.sh /etc/service/oauth-proxy/run
 
-CMD /run.sh
+CMD ["/sbin/my_init"]
