--- a/doriath.yml
+++ b/doriath.yml
@@ -138,6 +138,11 @@ build:
     tag: 1.0
     from: ./vault-kube
     depend: debian
+
+  - name: anduin/oauth-proxy
+    tag: 2.0.5.0
+    from: ./oauth-proxy
+    depend: phusion/baseimage
 credentials:
   - name: dockerhub
     username: ${DOCKERHUB_USERNAME}
